--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 dj-database-url==0.3.0
+dj-static==0.0.6
 Django==1.8
 django-revproxy==0.9.7
+gunicorn==19.3.0
 Jinja2==2.7.3
 libsass==0.7.0
 MarkupSafe==0.23
 Pillow==2.9.0
 psycopg2==2.6.1
 six==1.9.0
+static3==0.6.1
 urllib3==1.10.1
 wheel==0.24.0
