--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+beautifulsoup4==4.4.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.6
 django-revproxy==0.9.7
 Jinja2==2.8
-libsass==0.9.1
+libsass==0.9.2
 MarkupSafe==0.23
 Pillow==3.0.0
 psycopg2==2.6.1
@@ -11,4 +12,6 @@ six==1.10.0
 static3==0.6.1
 urllib3==1.12
 waitress==0.8.10
+WebOb==1.5.1
+WebTest==2.0.20
 wheel==0.26.0
