Add postgresql to the appveyor path

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 install:
-  - "SET PATH=C:\\Python35;C:\\Python35\\Scripts;%PATH%"
+  - "SET PATH=C:\\Python35;C:\\Python35\\Scripts;C:\\Program Files\\PostgreSQL\\9.4\\bin;%PATH%"
   - "pip install -r requirements.txt"
   - "pip install coverage"
 
