Add code style formatting with Black

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,6 @@ jobs:
           name: run tests
           command: |
             . .venv/bin/activate
+            pre-commit run --all-files
             coverage run manage.py test
             codecov
