--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,38 +6,23 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.7.4-buster
+      - image: circleci/python:3.7
 
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "requirements/local.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
           name: install dependencies
           command: |
             python3 -m venv .venv
             . .venv/bin/activate
-            pip install -r requirements/local.txt
-            pip install coverage codecov
-
-      - save_cache:
-          paths:
-            - ./.venv
-          key: v1-dependencies-{{ checksum "requirements/local.txt" }}
+            pip install "tox<4.0"
 
       # run tests!
       - run:
           name: run tests
           command: |
             . .venv/bin/activate
-            pre-commit run --all-files
-            coverage run manage.py test
-            codecov
+            tox
