--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode=production --progress --colors",
+    "build": "webpack --config webpack.config.js --mode=production --progress",
     "watch": "webpack --config webpack.config.js --mode=development --watch"
   },
   "repository": {
@@ -27,15 +27,15 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
-    "css-loader": "^3.2.0",
-    "file-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.3",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
