--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "htmx.org": "^1.8.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.14.3"
   },
