--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 name: Continuous Integration Checks
 
 # All branches
-on: push
+on: [push, pull_request]
 
 jobs:
   build:
