--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+https://github.com/pythonsd/pythonsd-django.git"
   },
   "engines": {
-    "node": "12.x"
+    "npm" : ">=10.0.0 <11.0.0",
+    "node": ">=20.0.0 <21.0.0"
   },
   "author": "San Diego Python & Contributors",
   "license": "MIT",
@@ -27,15 +28,14 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
-    "css-loader": "^6.5.1",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "node-sass": "^7.0.3",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "sass-loader": "^12.3.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^2.3.8",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "terser-webpack-plugin": "^5.3.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^4.10.0"
   }
 }
