--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,lint
+envlist = py3,lint
 skipsdist = True
 
 
@@ -12,7 +12,7 @@ setenv =
 deps = -r{toxinidir}/requirements/local.txt
 commands =
     # Ensure there aren't missing migrations
-    ./manage.py makemigrations --check --dry-run
+    python manage.py makemigrations --check --dry-run
 
     # Run the tests and report coverage
     coverage run ./manage.py test
