refactor/docs: removed mentions of Heroku
Heroku no longer needs to be listed as an allowed host or mentioned in comments.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@
 # Install requirements for local development with:
 # pip install -r requirements/local.txt
 
-# Requirements needed by Heroku for deployment
+# Requirements needed for deployment
 -r requirements/deployment.txt
