--- a/.env/local.sample
+++ b/.env/local.sample
@@ -27,7 +27,9 @@ REDIS_URL=redis://redis:6379/0
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
-# If using a custom storage for media storage, set the MEDIA_URL
+# If using a custom domain for media storage, set the MEDIA_URL
+#  and AWS_S3_CUSTOM_DOMAIN
+AWS_S3_CUSTOM_DOMAIN=
 MEDIA_URL=/media/
 # The endpoint URL is necessary for Cloudflare R2
 AWS_S3_ENDPOINT_URL=
