Update tox.ini command for Django 4.2
--check implies --dry-run on Django>=4.2

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 deps = -r{toxinidir}/requirements/local.txt
 commands =
     # Ensure there aren't missing migrations
-    python manage.py makemigrations --check --dry-run
+    python manage.py makemigrations --check
 
     # Run the tests and report coverage
     coverage run ./manage.py test
