--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.0",
   "description": "San Diego Python Website - sandiegopython.org",
   "scripts": {
-    "dist": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --minify",
-    "build": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css",
-    "watch": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --watch"
+    "dist": "cp ./assets/src/main.js ./assets/dist/ && tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --minify",
+    "build": "cp ./assets/src/main.js ./assets/dist/ && tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css",
+    "watch": "cp ./assets/src/main.js ./assets/dist/ && tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --watch"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,7 @@
   },
   "homepage": "https://github.com/sandiegopython/pythonsd-django#readme",
   "dependencies": {
-    "htmx.org": "^1.9.12",
-    "hyperscript.org": "^0.9.12"
+    "htmx.org": "^1.9.12"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
