--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.0",
   "description": "San Diego Python Website - sandiegopython.org",
   "scripts": {
-    "dist": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --minify",
-    "build": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css",
-    "watch": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/main.css --watch"
+    "dist": "npx @tailwindcss/cli -i ./assets/src/input.css -o ./assets/dist/main.css --minify",
+    "build": "npx @tailwindcss/cli -i ./assets/src/input.css -o ./assets/dist/main.css",
+    "watch": "npx @tailwindcss/cli -i ./assets/src/input.css -o ./assets/dist/main.css --watch"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "htmx.org": "^1.9.12"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@tailwindcss/cli": "^4.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
