--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,27 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 25.9.0
-    hooks:
-    - id: black
-      # Since the pre-commit runs on a file by file basis rather than a whole project,
-      # The excludes in pyproject.toml are ignored
-      exclude: migrations
-      language_version: python3.14
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v6.0.0
+  hooks:
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: https://github.com/adamchainz/django-upgrade
+  rev: "1.29.1"
+  hooks:
+  - id: django-upgrade
+    args: [--target-version, "5.2"]
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.14.6
+  hooks:
+    # Run the linter.
+    - id: ruff
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
+- repo: https://github.com/astral-sh/uv-pre-commit
+  # uv version.
+  rev: 0.9.11
+  hooks:
+    # Compile requirements to ensure uv.lock is up-to-date
+    - id: uv-lock
